adding hangman game

--- a/Week03/Hangman-Game/index.html
+++ b/Week03/Hangman-Game/index.html
@@ -18,7 +18,7 @@
                     <h1 id="guessing-stage"></h1>
                     <div class=" col-md-6 userGuessEntry">
                         <p>Enter your guess below:</p>
-                        <input type="text" id="guess" maxlength="1">
+                        <input type="text" id="guess-letter-box" maxlength="1">
                     </div>
                     <div class="col-md-6 guesses" id="guessesLeft">
                         <p>Number of guesses left:</p>
@@ -26,7 +26,7 @@
                     </div>
                     <div class="col-md-12 incorrectGuesses">
                     <p>Incorrectly guessed letters:</p>
-                    <h3 id="incorrect"> </h3>
+                    <h3 id="incorrect-guesses-box"> </h3>
                     </div>
                 </div>
             </div>
