--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
                     </div>
                     <div class="col-md-3" id="blue-crystal-box">
                     </div>
+<!--/* dummy crystals */-->
+                    <div class="col-md-3" id="orange-dummy-crystal">
+                    </div>
+                    <div class="col-md-3" id="green-dummy-crystal">
+                    </div>
+                    <div class="col-md-3" id="red-dummy-crystal">
+                    </div>
+                    <div class="col-md-3" id="blue-dummy-crystal">
+                    </div>
+<!--                     -->
                     <div class="col-md-6">
                         <h3>The number to match is:</h3><p id="goalValue"></p>
                     </div>
