updating crystal game

--- a/index.html
+++ b/index.html
@@ -44,24 +44,24 @@
                 </div>
                 <div class="col-md-12 game-stage">
                     <h2><img src="assets/img/star.gif" class="star">Select a crystal <img src="assets/img/star.gif" class="star"></h2>
-                    <div class="col-md-3" id="orange-crystal-box">
+                    <div class="col-md-3 orange-crystal-box real-crystal">
                     </div>
-                    <div class="col-md-3" id="green-crystal-box">
+                    <div class="col-md-3 green-crystal-box real-crystal">
                     </div>
-                    <div class="col-md-3" id="red-crystal-box">
+                    <div class="col-md-3 red-crystal-box real-crystal">
                     </div>
-                    <div class="col-md-3" id="blue-crystal-box">
+                    <div class="col-md-3 blue-crystal-box real-crystal">
                     </div>
-<!--/* dummy crystals */-->
-                    <div class="col-md-3" id="orange-dummy-crystal">
+                    <!--/* dummy crystals */-->
+                    <div class="col-md-3 orange-bg dummy-crystal">
                     </div>
-                    <div class="col-md-3" id="green-dummy-crystal">
+                    <div class="col-md-3 green-bg dummy-crystal">
                     </div>
-                    <div class="col-md-3" id="red-dummy-crystal">
+                    <div class="col-md-3 red-bg dummy-crystal">
                     </div>
-                    <div class="col-md-3" id="blue-dummy-crystal">
+                    <div class="col-md-3 blue-bg dummy-crystal">
                     </div>
-<!--                     -->
+                    <!--                     -->
                     <div class="col-md-6">
                         <h3>The number to match is:</h3><p id="goalValue"></p>
                     </div>
@@ -78,8 +78,11 @@
                 </div>
             </div>
         </div>
-    </body>
+        <div class="footer">
+            Ⓒ Amy Almazar. Sound effects from <a href="http://www.freesound.org">freesound.org</a>
+        </div>
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script src="assets/javascript/game.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    </body>
 </html>
