--- a/index.html
+++ b/index.html
@@ -30,11 +30,7 @@
                     <img src="assets/img/star.gif">
                     <img src="assets/img/longline.gif">
                     <img src="assets/img/star.gif">
-                    <img src="assets/img/longline.gif">
-                    <img src="assets/img/star.gif">
                     <h1>Crystal Collector</h1>
-                    <img src="assets/img/star.gif">
-                    <img src="assets/img/longline.gif">
                     <img src="assets/img/star.gif">
                     <img src="assets/img/longline.gif">
                     <img src="assets/img/star.gif">
@@ -63,23 +59,23 @@
                     </div>
                     <!--                     -->
                     <div class="col-md-6">
-                        <h3>The number to match is:</h3><p id="goalValue"></p>
+                        <h4>The number to match is:</h4><p id="goalValue"></p>
                     </div>
                     <div class="col-md-6">
-                        <h3>The total value of your crystals is:</h3><p id="playerValue">X</p>
+                        <h4>The total value of your crystals is:</h4><p id="playerValue">X</p>
                     </div>
                 <div class="col-md-12">
-                    <h3>Number of wins: <span id="winCount">0</span></h3>
+                    <h3><b>Number of wins:</b> <span id="winCount">0</span></h3>
                     <img src="assets/img/star.gif">
                     <img src="assets/img/longline.gif">
                     <img src="assets/img/star.gif">
-                    <h3>Number of losses: <span id="lossCount">0</span></h3>
+                    <h3><b>Number of losses:</b> <span id="lossCount">0</span></h3>
                 </div>
                 </div>
             </div>
         </div>
         <div class="footer">
-            Ⓒ Amy Almazar. Sound effects from <a href="http://www.freesound.org">freesound.org</a>
+            Ⓒ Amy Almazar. Sound effects from <a href="http://www.freesound.org">freesound.org.</a>
         </div>
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script src="assets/javascript/game.js"></script>
