--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
             <img src="assets/img/star.gif"><img src="assets/img/shortline.gif">
             <h2>You Win!</h2>
             <img src="assets/img/shortline.gif"><img src="assets/img/star.gif">
-            <br>
-            <p>Click to play again</p>
+            <p class="sans-serif" id="fortune">test</p>
+            <p>click here to test your fate again</p>
 
         </div>
         <div id="loserSign">
             <img src="assets/img/star.gif"><img src="assets/img/shortline.gif">
             <h2>You Lose!</h2>
             <img src="assets/img/shortline.gif"><img src="assets/img/star.gif">
-            <br>
+            <p class="sans-serif" id="fortune2">test</p>
             <p>click here to test your fate again</p>
         </div>
         <div class="container-flexible">
