--- a/index.html
+++ b/index.html
@@ -13,16 +13,30 @@
             <img src="assets/img/star.gif"><img src="assets/img/shortline.gif">
             <h2>You Win!</h2>
             <img src="assets/img/shortline.gif"><img src="assets/img/star.gif">
-            <p class="sans-serif" id="fortune">test</p>
-            <p>click here to test your fate again</p>
+            <br>
+            <br>
+            <br>
+            <p>Heed this advice:</p>
+            <p class="sans-serif" id="fortune"></p>
+            <img src="assets/img/longline.gif">
+            <p>
+                <br>Click here to test your fate again
+            </p>
 
         </div>
         <div id="loserSign">
             <img src="assets/img/star.gif"><img src="assets/img/shortline.gif">
             <h2>You Lose!</h2>
             <img src="assets/img/shortline.gif"><img src="assets/img/star.gif">
-            <p class="sans-serif" id="fortune2">test</p>
-            <p>click here to test your fate again</p>
+            <br>
+            <br>
+            <br>
+            <p>Heed this advice:</p>
+            <p class="sans-serif" id="fortune2"></p>
+            <img src="assets/img/longline.gif">
+            <p>
+                <br>Click here to test your fate again
+            </p>
         </div>
         <div class="container-flexible">
             <div class="row">
