--- a/Week04/Crystal Collector/index.html
+++ b/Week04/Crystal Collector/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Crystal Collector</title>
+        <title>Time Sheet</title>
         <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="assets/css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100,300" rel="stylesheet">
