--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
 
     <body>
-        <main class="page">
+        <main>
             <!--Page Borders-->
             <div id="left"></div>
             <div id="right"></div>
@@ -64,7 +64,7 @@
                         <div id="artistPhoto" class="artistdetails col s4">
                             artistPhoto
                         </div>
-                        <div id="artistName" class="artistdetails col s8 artist-name">
+                        <div id="artistName" class="artistdetails col s6 artist-name">
                             artistName
                         </div>
                     </div>
@@ -89,16 +89,15 @@
         
         <footer>
           <div class="footer">
-            <div class="container of-the-foot">
+            <div class="container">
                 <div class="footer-text copyright">
                     Copyright MAK &#169;
                 </div>
                 <div class="footer-text top-artists">
-                    The current top artist is <a id="current-top-artist" href="top.html">Drake!</a> | <a id="go-to-top" href="top.html">See other top artists.</a>
+                    <a id="go-to-top" href="top.html">Check out the top artists.</a>
                 </div>
             </div>
           </div>
-        </footer>
         
         <!--Import Firebase-->
         <script src="https://www.gstatic.com/firebasejs/4.3.1/firebase.js"></script>
