--- a/top.html
+++ b/top.html
@@ -36,7 +36,7 @@
             
             <!--Favorite Artists Table-->
              <div class="container">
-                <div class="row table-box">
+                <div class="row">
                     <table class="bordered">
                         <thead>
                           <tr>
@@ -47,23 +47,23 @@
                         <tbody>
                           <tr>
                             <td class="bold">1</td>
-                            <td id="first">Drake</td>
+                            <td id="first">None</td>
                           </tr>
                           <tr>
                             <td class="bold">2</td>
-                            <td id="second">Lady Gaga</td>
+                            <td id="second">None</td>
                           </tr>
                           <tr>
                             <td class="bold">3</td>
-                            <td id="third">Gorillaz</td>
+                            <td id="third">None</td>
                           </tr>
                           <tr>
                             <td class="bold">4</td>
-                            <td id="fourth">Gorillaz</td>
+                            <td id="fourth">None</td>
                           </tr>
                           <tr>
                             <td class="bold">5</td>
-                            <td id="fifth">Gorillaz</td>
+                            <td id="fifth">None</td>
                           </tr>
                         </tbody>
                       </table>
@@ -78,7 +78,7 @@
                     Copyright MAK &#169;
                 </div>
                 <div class="footer-text top-artists">
-                    The current top artist is <span id="current-top-artist" href="top.html">Drake!</span> | <a id="go-to-top" href="top.html">See other top artists.</a>
+                    <a id="go-to-top" href="top.html">Check out the top artists.</a>
                 </div>
             </div>
           </div>
@@ -93,6 +93,10 @@
         <!--Import our scripts-->
         <script src="assets/js/script.js"></script>
         <script src="assets/js/firebase.js"></script>
+        <script src="assets/js/ytSearch.js"></script><!--added 
+        by Kevin 9/30 @12:20pm-->
+        <script src="https://apis.google.com/js/client.js?onload=init"></script><!--added 
+        by Kevin 10/01 @12:35am: Needed for the youTube api-->
 
     </body>
 </html>
