--- a/Week03/Hangman-Game/index.html
+++ b/Week03/Hangman-Game/index.html
@@ -2,39 +2,27 @@
     <head>
         <title>Hangman</title>
         <link rel="stylesheet" href="assets/css/reset.css">
+        <!-- Our styles -->
         <link rel="stylesheet" href="assets/css/style.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+        <!-- Materialize's Styles -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     </head>
     <body>
-        <div class="container-flexible">
-            <div class="row">
-                <div class="jumbotron">
-                    <h1>Hangman Game</h1>
-                    <p>Enter Instructions here!</p>
-                </div>
-                <div class="col-md-12 game-stage">
-                    <h1 id="correct-letters"></h1>
-                    <h1 id="guessing-stage"></h1>
-                    <div class=" col-md-6 userGuessEntry">
-                        <p>Enter your guess below:</p>
-                        <input type="text" id="guess-letter-box" maxlength="1">
-                    </div>
-                    <div class="col-md-6 guesses" id="guessesLeft">
-                        <p>Number of guesses left:</p>
-                        <h3 id ="Guesses-left">10</h3>
-                    </div>
-                    <div class="col-md-12 incorrectGuesses">
-                    <p>Incorrectly guessed letters:</p>
-                    <h3 id="incorrect-guesses-box"> </h3>
-                    </div>
+        <!-- Jquery's JavaScript -->
+        <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+        <!-- Materialize's JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+        <div clas="container">
+            <div class="row"> 
+                <div class="col s12">
+                    <p>Insert some stuffs here!</p>
+                    <p id="blanks"></p>
                 </div>
             </div>
         </div>
+        <!-- Hangman's JavaScript -->
+        <script src="assets/javascript/game.js"></script>
     </body>
-    <script src="assets/javascript/game.js"></script>
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </html>
 
 
